# rai

./: Cargo.toml  README.md  run.sh  test.sh
android/: .gitignore  build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/ademar/rai/: MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/values-night/: themes.xml
proto/: messages.proto
rust/: .gitignore  Cargo.toml  build.rs  run.sh  setup.sh  test.sh
rust/src/: additional_glue.rs  functions.rs  java_glue.rs  main.rs  payload.rs  rai.rs
src/: main.rs
src/rai/: functions.rs  payload.rs
